--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "authors": [
         {
             "name": "Ostap Pashko",
-            "email": "ostap.paashko@gmail.com",
+            "email": "ostap.paashko@gmail.com"
         }
     ],
     "autoload": {
